--- a/style.css
+++ b/style.css
@@ -73,3 +73,132 @@ img{
 .mt-5{
     margin-top: 5rem;
 }
+
+.header{
+    min-height: 60rem;
+    background-image: url(img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 5rem 0;
+}
+
+@media (min-width: 768px){
+    .header{
+        padding: 2rem 0;
+    }
+}
+
+.contenido-header{
+    display: flex;
+    flex-direction: column;
+    height: calc((60rem - 4rem));
+    justify-content: space-between;
+    color: var(--blanco);
+}
+
+.nombre-sitio{
+    font-weight: 300;
+    text-align: center;
+    font-size: 3rem;
+}
+
+@media(min-width: 768px){
+    .nombre-sitio{
+        font-size: 5rem;
+    }
+}
+.nombre-sitio span{
+    font-weight: 900;
+}
+
+@media (min-width:768px){
+    .barra{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+
+.contacto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.telefono{
+    display: flex;
+}
+.telefono::before {
+    content: '';
+    display: block;
+    width: 4rem;
+    height: 4rem;
+    background-image: url(img/telefono.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    margin-right: 1rem;
+}
+
+@media(min-width: 768px){
+    .contacto{
+        align-items: flex-end;
+    }
+}
+
+.header a{
+    color: var(--blanco);
+    font-size: 2rem;
+}
+
+.navegacion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 3rem;
+}
+@media(min-width: 768px){
+    .navegacion{
+        flex-direction: row;
+    }
+}
+
+.navegacion a{
+    padding: 0.5rem  1rem;
+    transition: background-color .3s ;
+    width: 100%;
+    text-align: center;
+}
+
+.navegacion a:hover{
+    background-color: rgb(255 255 255 / .5);
+    color: var(--negro);
+
+}
+
+.slogan{
+    text-align: center;
+}
+
+@media(min-width: 768px){
+    .slogan{
+        text-align: right;
+    }
+}
+
+.slogan h1{
+    font-size: 3rem;
+    margin: 0;
+}
+
+@media(min-width: 768px) {
+    .slogan h1{
+        font-size: 5rem;
+    }
+}
+
+.slogan p{
+    margin: 0;
+    line-height: 1;
+}
