--- a/style.css
+++ b/style.css
@@ -308,3 +308,45 @@ background-repeat: no-repeat;
         padding: 2rem 2rem 0 0;
     }
 }
+
+/**GALERÍA**/
+
+.galeria{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+.galeria img{
+    object-fit: cover;
+    height: 100%;
+}
+@media(min-width: 992px){
+    .galeria{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media(min-width: 768px){
+      .galeria .imagen:nth-child(3){
+        margin-bottom: 4.8rem;
+    
+        }
+}
+
+.galeria .imagen:nth-child(2){
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+}
+
+
+
+.galeria .imagen:nth-child(3){
+    grid-column: 2 / 3;
+    grid-row: 3 / 5 ;
+}
+
+.galeria .imagen:nth-child(6){
+    grid-column: 1 /2;
+    grid-row:2 / 4;
+}
