Termina web con html y estilos responsive

--- a/style.css
+++ b/style.css
@@ -350,3 +350,33 @@ background-repeat: no-repeat;
     grid-column: 1 /2;
     grid-row:2 / 4;
 }
+
+/**FOOTER**/
+
+.footer{
+    height: 60rem;
+    background-image: url(img/footer_bg.jpg);
+    background-repeat: repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+     color: var(--blanco);
+}
+
+.footer a{
+    color: var(--blanco);
+    font-size: 2rem;
+}
+
+
+.copyrigth{
+    text-align: center;
+    background-color: var(--negro);
+    margin: 5rem 0 0 0;
+    font-size: 2rem;
+    padding: 1rem;
+
+}
+
